Added sidebar, still needs icons and general cleanup. added upper part for dashboard.

--- a/html/index.html
+++ b/html/index.html
@@ -7,6 +7,115 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="mainContainer">
+
+        <div class="sidebar">
+            <h4>Dashboard</h4>
+            <div class="sidebarBtnDiv">
+                <button class="sidebarBtn">Home</button>
+                <button class="sidebarBtn">Profile</button>
+                <button class="sidebarBtn">Messages</button>
+                <button class="sidebarBtn">History</button>
+                <button class="sidebarBtn">Tasks</button>
+                <button class="sidebarBtn">Communities</button>
+            </div>
+            <div class="sidebarBtnDiv">
+                <button class="sidebarBtn">Settings</button>
+                <button class="sidebarBtn">Support</button>
+                <button class="sidebarBtn">Privacy</button>
+            </div>
+        </div>
+
+        <div class="topInfo">
+            <div class="searchContainer">
+                <img class="svgSmall" src="../svg/magnify.svg" alt="">
+                <input type="search" name="searchName" id="searchId">
+            </div>
+            <div class="personInfoAlert">
+                <img src="../svg/bell-alert-outline.svg" alt="" class="svgSmall">
+                <img src="../profilePic/MorganProfile.png" alt="" class="svgProfileIcon">
+                <h5 id="profileName">Morgan Oakley</h5>
+            </div>
+            <div class="personInfo">
+                <img src="../profilePic/MorganProfile.png" alt="" class="svgProfileIconBig" id="profilePic">
+                <p>Hi there,</p>
+                <h4 id="profileName">Morgan Oakley(<a id="profileSocialLink">@morgan</a>)</h4>
+            </div>
+            <div class="personInfoBtns">
+                <button class="personInfoBtn" id="personNewBtn">New</button>
+                <button class="personInfoBtn" id="personUploadBtn">Upload</button>
+                <button class="personInfoBtn" id="personShareBtn">Share</button>
+            </div>
+        </div>
+
+        <div class="infoContainer">
+
+            <h4>Your projects</h4>
+            <div class="infoCardsContainer">
+                <div class="infoCard">
+                    <h5>Super project</h5>
+                    <p>Much text goes here</p>
+                </div>
+                <div class="infoCard">
+                    <h5>Super project 2</h5>
+                    <p>Much text goes here</p>
+                </div>
+                <div class="infoCard">
+                    <h5>Super project 3</h5>
+                    <p>Much text goes here</p>
+                </div>
+                <div class="infoCard">
+                    <h5>Super project 4</h5>
+                    <p>Much text goes here</p>
+                </div>
+            </div>
+
+            <h4>Annoucements</h4>
+            <div class="annoucements">
+                <div class="annoucement">
+                    <h5>Maintanence</h5>
+                    <p>Today during 10am - 14pm maintanence</p>
+                </div>
+                <div class="annoucement">
+                    <h5>Community share</h5>
+                    <p>Person x shared</p>
+                </div>
+                <div class="annoucement">
+                    <h5>Updated policy</h5>
+                    <p>2024 policy changes can be found here</p>
+                </div>
+            </div>
+
+            <h4>Trending</h4>
+            <div class="trendings">
+                <div class="trending">
+                    <img src="" alt="">
+                    <h6 class="profile">@tegan</h6>
+                    <p>Word peace builder</p>
+                </div>
+                <div class="trending">
+                    <img src="" alt="">
+                    <h6 class="profile">@morgan</h6>
+                    <p>Word peace builder</p>
+                </div>
+                <div class="trending">
+                    <img src="" alt="">
+                    <h6 class="profile">@kendall</h6>
+                    <p>Word peace builder</p>
+                </div>
+                <div class="trending">
+                    <img src="" alt="">
+                    <h6 class="profile">@alex</h6>
+                    <p>Word peace builder</p>
+                </div>
+                <div class="trending">
+                    <img src="" alt="">
+                    <h6 class="profile">@longJohn</h6>
+                    <p>Word peace builder</p>
+                </div>
+            </div>
+            
+        </div>
+    </div>
 </body>
 </html>
