added font and shadows to topinfo buttons

--- a/html/index.html
+++ b/html/index.html
@@ -13,8 +13,8 @@
         <div class="sidebar">
             <div class="sidebarDash">
                 <div class="sidebarTextWithIcons">
-                    <span class="material-icons md-light md-14 sidebarIcons">home</span>
-                    <h4>Dashboard</h4>
+                    <span class="material-icons md-light md-20 sidebarIcons">dashboard</span>
+                    <h2>Dashboard</h2>
                 </div>
             </div>
             
